# synthzip

./: Cargo.toml  README.md
src/: central_directory.rs  central_directory_file_header.rs  data_descriptor.rs  end_of_central_directory.rs  entry.rs  error.rs  lib.rs  local_file_header.rs
